src/test/deca/context/valid/personal/class_field.deca
// Description:
//    test minimaliste pour testé le pass 2
//
// Resultats:
//
//
//
// Historique:
//    cree le 14/01/2025

class A{
}

class B {
    protected B b;
}